--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <h1> a link page on the internet? how original!</h1>
     
     <div class="image-container">
-      <a href="https://riverbaratelli.com"><img src="mainsite.png" class="image hover-colorize"> </a>
-      <a href="https://xron.site/"> <img src="xronsite.png" class="image hover-colorize"> </a>
       <a href="https://youtube.com/@riverbaratelli"> <img src="yt.png" class="image hover-colorize"> </a>
+      <a href="https://instagram.com/riverbaratelli"><img src="ig.png" class="image hover-colorize"> </a>
+      <a href="https://xron.site/"> <img src="xronsite.png" class="image hover-colorize"> </a>
     </div>
     
     <div class="image-container">
-      <a href="https://instagram.com/riverbaratelli"><img src="ig.png" class="image hover-colorize"> </a>
       <a href="mailto:riverbaratelli@gmail.com"> <img src="email.png" class="image hover-colorize"> </a>
+      <a href="https://riverbaratelli.wixsite.com/project2"><img src="mainsite.png" class="image hover-colorize"> </a>
       <a href="https://open.spotify.com/track/7pfDqoJTf20w13DQf9uYO0?si=6a2168e298234ed8"> <img src="pls.png" class="image hover-colorize"> </a>
     </div>
 
