--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     <div class="image-container">
       <a href="mailto:riverbaratelli@gmail.com"> <img src="email.png" class="image hover-colorize"> </a>
-      <a href="https://www.youtube.com/watch?v=gQCCOpEZXfg"><img src="hhnzero.png" class="image hover-colorize"> </a>
+      <a href="https://www.youtube.com/watch?v=gQCCOpEZXfg"><img src="hhnzerorvr.png" class="image hover-colorize"> </a>
       <a href="https://open.spotify.com/track/7pfDqoJTf20w13DQf9uYO0?si=6a2168e298234ed8"> <img src="pls.png" class="image hover-colorize"> </a>
     </div>
 
