--- a/pro.html
+++ b/pro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0;url=https://riverbaratelli.com/">
-    <title>Sending you to Discord!</title>
+    <title>Sending you to the full site!</title>
 </head>
 <body>
     <p>If there's an error with your redirection, <a href="https://riverbaratelli.com/">click here</a>.</p>
